@@ -20,6 +20,10 @@
      change the test for still-open Unix domain sockets to be robust against
      nc implementations that produce error messages. from -portable
      (Id sync only)
+   - dtucker@cvs.openbsd.org 2014/07/22 23:23:22
+     [regress/unittests/sshkey/mktestdata.sh]
+     Sign test certs with ed25519 instead of ecdsa so that they'll work in
+     -portable on platforms that don't have ECDSA in their OpenSSL.  ok djm
 
 20140721
  - OpenBSD CVS Sync
